test/errors/try_err_01.slip
; OverloadResolutionFailed

(func test():int
    0)

(func main (args:(array_view string)):int
    (puts (try (get args 1)))
    (puti (atoi (try (get args 1)))) ; atoi is not defined
    0)
